# CapStone2_BE

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  claude-progress.txt  docker-compose.yml  pyproject.toml  run_dev.py
.claude/: settings.local.json
.claude/commands/: blog.md  commit.md  fix.md  review.md  start.md
app/: main.py
app/core/: database.py  security.py
app/dependencies/: auth.py
app/models/: models.py
app/routers/: auth.py  health.py  instagram.py  places.py  spots.py  storages.py  users.py
app/schemas/: instagram.py  place.py  spot.py  storage.py  user.py
app/services/: instagram_crawler.py  kakao_oauth.py  playwright_manager.py
docs/: API_SPECIFICATION.md
migrations/: env.py
migrations/versions/: 5fe6c16c6978_add_place_reviews.py  8d6bab21bc7a_schema_v2_normalize_places_and_storage_.py  a3f8b2c1d947_add_naver_upsert_index.py
notes/: 2026-05-02_naver_upsert.md  2026-05-03-kakao-oauth.md  2026-05-03-planning-decisions.md  2026-05-03_api_specification.md  2026-05-03_instagram_pipeline_refactor.md  2026-05-03_instagram_share_auto_save.md  2026-05-03_place_upsert_and_dedup.md
